--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Phone Number Generator - Free Phone Numbers for Testing</title>
     <link rel="stylesheet" href="/src/style.css">
+    <link rel="canonical" href="https://phonenumber-generator.com" />
 </head>
 <body class="bg-white">
     <!-- Header -->
