--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Phone Number Generator - Free Phone Numbers for Testing</title>
+    <title>Phone Number Generator - Free Phone Numbers generaotr</title>
     <link rel="stylesheet" href="/src/style.css">
     <link rel="canonical" href="https://phonenumber-generator.com" />
 </head>
